syntax = "proto3";

option csharp_namespace = "FormulaOne";

message EmptyRequest {
}

message TeamHeader {
	int32 id = 1;
	string name = 2;
	string manufacturer = 3;
}

message GetTeamRequest {
	int32 id = 1;
}

message Team { 
	int32 id = 1;
	string name = 2;
	string manufacturer = 3;
	string firstDriver = 4;
	string secondDriver = 5;
	string country = 6;
}

message Driver {
	int32 id = 1;
	string firstName = 2;
	string lastName = 3;
}

message Summary {
	int32 itemsReceived = 1;
}

message TeamNote {
	string Message = 1;
}

service TeamsService {
	rpc GetAllTeams(EmptyRequest) returns (stream TeamHeader);
	rpc GetTeamById(GetTeamRequest) returns (Team);
	rpc AddDrivers(stream Driver) returns (Summary);
	rpc GetAllDrivers(EmptyRequest) returns (stream Driver);
	rpc TeamChat(stream TeamNote) returns (stream TeamNote);
}